--- a/src/Components/Blogs/Blog.css
+++ b/src/Components/Blogs/Blog.css
@@ -1,19 +1,18 @@
 .blogs {
-  display: flex;
+ 
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 2rem;
+  
+ 
 
-  flex-direction: column;
-  flex-basis: auto;
-  cursor: pointer;
 }
 
 .blog {
-  display: flex;
-  flex-direction: column;
-  flex-basis: auto;
-  height: auto;
-  /* flex:1; */
-  padding: 20px 50px;
-  margin: 20px 0;
+
+  padding: 15px 25px;
+  /* margin: 20px 0; */
   border-radius: 20px;
   box-shadow: -2px 1px 9px -2px rgba(112, 112, 112, 0.322);
   -webkit-box-shadow: -2px 1px 9px -2px rgba(112, 112, 112, 0.322);
@@ -38,8 +37,24 @@
 }
 
 .blog_content > img {
-  width: 80%;
-  height: 370px;
+  width: 100%;
+  height: 200px;
   margin: 20px 0;
   border-radius: 20px;
+}
+
+.spinner{
+  display: flex;
+  margin: 50px;
+  justify-content: center;
+  align-items: center;
+
+
+}
+.spinner img{
+  height: 170px;
+}
+
+@media (max-width: 768px) {
+ 
 }
