--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -4,9 +4,12 @@
   overflow-y: scroll;
   text-align: justify;
   width: 80vw;
+  margin-left: -30px;
+ 
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .home::-webkit-scrollbar {
   display: none;
 }
+
