--- a/src/Components/Auth/auth.css
+++ b/src/Components/Auth/auth.css
@@ -39,7 +39,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 100%;
+  /* min-width: 100%; */
   padding: 0 150px;
   margin: 140px auto;
 
@@ -48,14 +48,17 @@
 .auth-right > form > input {
   margin-bottom: 20px;
   width: 100%;
-  padding: 12px 0;
+  min-width: 300px;
+  padding: 12px 20px;
   border: none;
+  font-size: 18px;
   background: rgba(128, 128, 128, 0.219);
   border-radius: 333px;
 }
 .auth-right > form > input::placeholder {
   color: rgb(0, 0, 0);
   padding-left: 20px;
+  
 }
 .auth-right > form > button {
   background: #1da1f3;
@@ -83,4 +86,10 @@
   font-size: 18px;
   font-weight: 700;
   cursor: pointer;
+}
+@media (max-width: 768px){
+  
+  .auth-left .content  {
+    text-align: center;
+  }
 }
