--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -14,7 +14,6 @@
   display: flex;
   flex-direction: column;
   margin-top: 30px;
-  
 }
 
 .brand_icon {
@@ -29,11 +28,11 @@
   background: #1da1f37e;
   transition: all 0.5s linear;
 }
- 
+
 .sidebar_option {
   padding: 10px 0;
 }
- 
+
 .sidebar_text,
 .sidebar_icon {
   font-weight: 700;
@@ -43,7 +42,6 @@
 }
 
 .addBlog {
-  
   /* margin: 20px 0; */
   padding: 12px 30px;
   border: none;
@@ -55,9 +53,9 @@
   text-transform: uppercase;
   cursor: pointer;
 }
-.addBlog:hover{
+.addBlog:hover {
   background: #1da1f3d2;
-  transition: all .5s linear;
+  transition: all 0.5s linear;
 }
 .logOut {
   margin: 10px 0;
@@ -75,11 +73,11 @@
   background: #1da1f3da;
   transition: all 0.3s linear;
 }
-.addBlog > span,.logOut>span {
+.addBlog > span,
+.logOut > span {
   margin-left: 10px;
 }
 .profile > img {
-  
   height: 100%;
   border-radius: 50%;
   border: 1px solid #fff;
@@ -96,13 +94,13 @@
   cursor: pointer;
   /* border: 2px solid rgba(92, 92, 92, 0.055); */
   border-radius: 333px;
-  box-shadow: -2px 1px 9px -2px rgba(112, 112, 112, 0.062);
-  -webkit-box-shadow: -2px 1px 9px -2px rgba(112, 112, 112, 0.322);
-  -moz-box-shadow: -2px 1px 9px -2px rgba(112, 112, 112, 0.322);
+  box-shadow: -2px 1px 9px -2px rgba(41, 241, 255, 0.062);
+  -webkit-box-shadow: -2px 1px 9px -2px rgba(41, 241, 255, 0.062);
+  -moz-box-shadow: -2px 1px 9px -2px rgba(41, 241, 255, 0.062);
 }
-.profile:hover{
+.profile:hover {
   background: #42aaeb21;
-  transition: .3s all linear;
+  transition: all 0.3s ease-in-out;
 }
 /* .profile .profile-content .name {
   font-size: 16px;
@@ -116,9 +114,8 @@
 @media (max-width: 768px) {
   .sidebar {
     flex: 0.1;
-    
   }
-   
+
   .profile .profile-content .name,
   .profile .profile-content .user-name,
   .profile img {
@@ -131,30 +128,29 @@
   .sidebar_text {
     display: none;
   }
-  .sidebar_option>a>.sidebar_icon{
+  .sidebar_option > a > .sidebar_icon {
     padding: 6px;
     border-radius: 50%;
     font-size: 36px;
-     
   }
-  .sidebar_option>a>.sidebar_icon:hover{
+  .sidebar_option > a > .sidebar_icon:hover {
     color: #1da1f3;
     background: #1da1f365;
+    transition: all 0.3s ease-in-out;
   }
   .addBlog {
     padding: 5px 10px;
     border-radius: 50%;
     font-size: 24px;
-    
   }
   .logOut {
     padding: 10px;
     border-radius: 50%;
     font-size: 16px;
     margin-left: -15px;
-
   }
-  .logOut > span,.addBlog> span{
+  .logOut > span,
+  .addBlog > span {
     display: none;
   }
 }
